[package]
name = "ics2pda"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
icalendar = { version = "0.16.9", features = ["serde", "parser", "serde_json"] }
chrono = "0.4.38"
toml = "0.8.19"
reqwest = "0.12.8"
regex = "1.11.0"
derive-new = "0.7.0"
